@@ -3,6 +3,8 @@ Changes in version 0.3.2
 
 * Upgraded to Cobertura 1.9.4.1.
 
+* Print mappings option for obfuscate macros.
+
 
 Changes in version 0.3.1
 ------------------------
